crates/code-graph-tools/tests/snapshots/snapshot_responses__response_get_symbol_summary_whole_graph.snap
---
source: crates/code-graph-tools/tests/snapshot_responses.rs
expression: parsed
---
{
  "": {
    "class": 4,
    "enum": 1,
    "function": 3,
    "method": 5,
    "struct": 1,
    "typedef": 1
  },
  "utils": {
    "function": 3
  }
}
