crates/code-graph-tools/tests/snapshots/snapshot_responses__response_search_symbols_byte_budget_truncated.snap
---
source: crates/code-graph-tools/tests/snapshot_responses.rs
expression: parsed
---
{
  "limit": 1000,
  "next_offset": 3,
  "offset": 0,
  "results": [
    {
      "file": "[testdata]/big.cpp",
      "id": "[testdata]/big.cpp:func_000",
      "kind": "function",
      "line": 1,
      "name": "func_000"
    },
    {
      "file": "[testdata]/big.cpp",
      "id": "[testdata]/big.cpp:func_001",
      "kind": "function",
      "line": 2,
      "name": "func_001"
    },
    {
      "file": "[testdata]/big.cpp",
      "id": "[testdata]/big.cpp:func_002",
      "kind": "function",
      "line": 3,
      "name": "func_002"
    }
  ],
  "total": 30,
  "truncated": true
}
