crates/code-graph-tools/tests/snapshots/snapshot_responses__response_search_symbols_helper_language_rust.snap
---
source: crates/code-graph-tools/tests/snapshot_responses.rs
expression: parsed
---
{
  "limit": 20,
  "offset": 0,
  "results": [
    {
      "file": "[testdata]/foo.rs",
      "id": "[testdata]/foo.rs:helper",
      "kind": "function",
      "line": 9,
      "name": "helper"
    }
  ],
  "total": 1
}
